{
    "name": "EditorInputActions",
    "maps": [
        {
            "name": "Editor",
            "id": "b2f8f738-8fdf-4892-976d-8e87946f7298",
            "actions": [
                {
                    "name": "PlaceTile",
                    "type": "Button",
                    "id": "78456bf3-56ab-4b8d-98f4-5d3a51106492",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectTileGround",
                    "type": "Button",
                    "id": "83b19eb2-5d59-437c-b7aa-23211c25f184",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectTileWater",
                    "type": "Button",
                    "id": "3ca0946a-a2b9-4613-9e4a-e186638feb70",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectTileRock",
                    "type": "Button",
                    "id": "2d3a8091-6c41-4f5f-a6e6-d0f6e1868b90",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "3f312132-0d65-42b8-9454-10bf53493197",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2a509fe9-fc12-4f4e-94b8-10719e6c792a",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Hold(duration=0.2)",
                    "processors": "",
                    "groups": "",
                    "action": "PlaceTile",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7950d99b-eb08-42d1-ba71-e95656083a87",
                    "path": "<Keyboard>/t",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectTileGround",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9444b9ad-1b46-489b-944a-ac5af1763154",
                    "path": "<Keyboard>/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectTileWater",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "437ea12f-0430-4eee-b6d2-db69a96446b1",
                    "path": "<Keyboard>/u",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectTileRock",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a5f1e037-4708-4920-95bf-d497974277f8",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}